--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@ html[data-theme="dark"] {
   --color-background-section: #003366;
   --color-border:#003366;
   --color-text: #FFFFFF;
-  --color-text-hover: #6495ED;
-  --color-text-second: #B0C4DE;
+  --color-text-hover: #FFFFFF;
+  --color-text-second: #6495ED;
   --color-link: #4DA8DA;
   --color-navbars: #002855;
   --color-navbars-text: #FFFFFF;
