--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,8 +36,6 @@ html[data-theme="light"] {
   --color-button-text:#FFFFFF;
   --color-button-text-hover:#FFFFFF;
   --color-shadow: black;
-
-
 }
 
 body {
@@ -46,6 +44,32 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+*::-webkit-scrollbar {
+  height: 7px;
+  width: 7px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background-color: #737879;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: var(--color-text);
+}
+
+.noScrollBar::-webkit-scrollbar {
+  display: none;
+}
+
+.noScrollBar::-webkit-scrollbar-track {
+  display: none;
+}
+
+.noScrollBar::-webkit-scrollbar-thumb {
+  display: none;
+}
 
 
 
