--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,17 @@
 html[data-theme="dark"] {
   --color-background: #000020;
   --color-border:#003366;
-  --color-text: #4DA8DA;
+  --color-text: #8bc7e7;
+  --color-text-secondary: #4DA8DA;
   --color-text-hover: #c6e6f9;
   --color-button:#005EB8;
-  --color-button-hover:#338FB3;
-  --color-button-text:#aad2e8;
-  --color-button-text-hover: ;
+  --color-button-hover:#80CBC4;
+  --color-button-text:black;
+  --color-button-text-hover: black ;
+  --color-input: ;
+  --color-input-text: ;
+  --color-input-border: #4DA8DA;
+  
 
 
 
@@ -27,8 +32,9 @@ html[data-theme="dark"] {
 
 html[data-theme="light"] {
   --color-background: #FFFFFF;
-  --color-border:#333333;
-  --color-text: #333333;
+  --color-border:#005EB8;
+  --color-text: #005EB8;
+  --color-text-secondary: #333333;
   --color-text-hover: #005EB8;
   --color-button:#FFFFFF;
   --color-button-hover:#005EB8;
