--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,14 +6,17 @@
 
 html[data-theme="dark"] {
   --color-background: #000020;
+  --color-background-selected: #80CBC4;
   --color-border:#003366;
-  --color-text: #8bc7e7;
-  --color-text-secondary: #4DA8DA;
+  --color-text: #37b2f9;
+  --color-text-primary: #78c5f2;
+  --color-text-secondary: #FFFFFF;
   --color-text-hover: #c6e6f9;
+  /* --color-text-hover: #c6e6f9; */
   --color-button:#005EB8;
   --color-button-hover:#80CBC4;
-  --color-button-text:black;
-  --color-button-text-hover: black ;
+  --color-button-text:#c6e6f9;
+  --color-button-text-hover: #003366;
   --color-input: ;
   --color-input-text: ;
   --color-input-border: #4DA8DA;
@@ -32,14 +35,15 @@ html[data-theme="dark"] {
 
 html[data-theme="light"] {
   --color-background: #FFFFFF;
+  --color-background-selected: #4DA8DA;
   --color-border:#005EB8;
-  --color-text: #005EB8;
+  --color-text: #003366;
   --color-text-secondary: #333333;
-  --color-text-hover: #005EB8;
-  --color-button:#FFFFFF;
+  --color-text-hover: #5986b1;
+  --color-button: #c6e6f9;
   --color-button-hover:#005EB8;
   --color-button-text:#005EB8;
-  --color-button-text-hover:#FFFFFF;
+  --color-button-text-hover:#c6e6f9;
 
 
 
