--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,12 @@
 html[data-theme="dark"] {
   --color-background: #000020;
   --color-background2: #003366;
-  --color-background3: ;
+  --color-background3: #c6e6f9;
+  --color-text: #37b2f9;
+  --color-text2: #c6e6f9;
+  --color-text3: #005EB8;
   --color-background-selected: #80CBC4;
   --color-border:#003366;
-  --color-text: #37b2f9;
   --color-text-primary: #78c5f2;
   --color-text-secondary: #FFFFFF;
   --color-text-hover: #c6e6f9;
